# OOP_Project_C

./: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  Belladonna.cpp  Belladonna.h  CMakeLists.txt  Define.cpp  Fox.cpp  Fox.h  GeneralFunctions.cpp  GeneralFunctions.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Human.cpp  Human.h  List.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  Sheep.cpp  Sheep.h  SosnowskyHogweed.cpp  SosnowskyHogweed.h  SowThistle.cpp  SowThistle.h  Turtle.cpp  Turtle.h  Vector.h  Wolf.cpp  Wolf.h  World.cpp  World.h  main.cpp
